1. 第一次测试因为 DockerFile 拼写成 Dockerfile 导致找不到这个文件从而失败 2. 第二次测试，标签名为 v0.0.2

--- a/.github/workflows/build-push-docker.yml
+++ b/.github/workflows/build-push-docker.yml
@@ -43,7 +43,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .                 # Docker 构建上下文 (Dockerfile 所在目录)
-          file: ./Dockerfile         # Dockerfile 的路径
+          file: ./DockerFile         # Dockerfile 的路径
           push: true                 # 构建完成后推送到仓库
           pull: true
           tags: |
